[gd_scene load_steps=29 format=3 uid="uid://3e542tiw1h3i"]

[ext_resource type="Script" path="res://Scripts/level_1.gd" id="1_d3sb6"]
[ext_resource type="PackedScene" uid="uid://chwdvm8ujw2d5" path="res://Cenas/player_1_level.tscn" id="1_rcf75"]
[ext_resource type="Texture2D" uid="uid://buj6pubairxp8" path="res://Assets/Brick.png" id="2_2ks55"]
[ext_resource type="PackedScene" uid="uid://y3dmd6d3wdwb" path="res://Cenas/player_2_level.tscn" id="2_ew0c6"]
[ext_resource type="PackedScene" uid="uid://b7lyloobwy3eu" path="res://Cenas/poison.tscn" id="3_co6y8"]
[ext_resource type="Texture2D" uid="uid://poi6dc6crgkd" path="res://Assets/Grama1.png" id="5_najxo"]
[ext_resource type="PackedScene" uid="uid://b1s1xbd6tkteg" path="res://Cenas/coin.tscn" id="6_nr2ex"]
[ext_resource type="PackedScene" uid="uid://dswnvcoflll8f" path="res://Cenas/button.tscn" id="7_qpitk"]
[ext_resource type="Texture2D" uid="uid://dtjt2d43pn15f" path="res://Assets/Grama2.png" id="7_yctkw"]
[ext_resource type="PackedScene" uid="uid://bfsg6kssa0egr" path="res://Cenas/door.tscn" id="8_o7xg6"]
[ext_resource type="Texture2D" uid="uid://bw3mv5t3g1ape" path="res://Assets/Grama3.png" id="8_v36dm"]
[ext_resource type="Texture2D" uid="uid://dn7lyuhparnto" path="res://Assets/Nuvem.png" id="9_djb3c"]
[ext_resource type="Texture2D" uid="uid://bymqmvjr0okbo" path="res://Assets/TerraAlta1.png" id="10_0lq70"]
[ext_resource type="Texture2D" uid="uid://che1yrfgakw7e" path="res://Assets/TerraAlta2.png" id="11_00qcv"]
[ext_resource type="Texture2D" uid="uid://wieo6xgjydoi" path="res://Assets/TerraGrossa1.png" id="12_carqs"]
[ext_resource type="Texture2D" uid="uid://cxj5aoon55u1u" path="res://Assets/TerraGrossa2.png" id="13_x270q"]
[ext_resource type="PackedScene" uid="uid://fjuvf33cujn2" path="res://Cenas/ui.tscn" id="17_hhid0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nnaxo"]
texture = ExtResource("5_najxo")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t2gu2"]
texture = ExtResource("2_2ks55")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bpudm"]
texture = ExtResource("7_yctkw")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h37oy"]
texture = ExtResource("8_v36dm")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hcd6p"]
texture = ExtResource("9_djb3c")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p5d2x"]
texture = ExtResource("10_0lq70")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_611qt"]
texture = ExtResource("11_00qcv")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mmws2"]
texture = ExtResource("12_carqs")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f5obe"]
texture = ExtResource("13_x270q")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_emuvx"]
physics_layer_0/collision_layer = 2
sources/1 = SubResource("TileSetAtlasSource_t2gu2")
sources/0 = SubResource("TileSetAtlasSource_nnaxo")
sources/2 = SubResource("TileSetAtlasSource_bpudm")
sources/3 = SubResource("TileSetAtlasSource_h37oy")
sources/4 = SubResource("TileSetAtlasSource_hcd6p")
sources/5 = SubResource("TileSetAtlasSource_p5d2x")
sources/6 = SubResource("TileSetAtlasSource_611qt")
sources/7 = SubResource("TileSetAtlasSource_mmws2")
sources/8 = SubResource("TileSetAtlasSource_f5obe")

[sub_resource type="GDScript" id="GDScript_cdsgp"]
script/source = "extends Node

class_name LevelManager

var coins = 0"

[node name="Level1" type="Node"]
script = ExtResource("1_d3sb6")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2.3)

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("6_nr2ex")]
position = Vector2(-211, 2)

[node name="Coin2" parent="Coins" instance=ExtResource("6_nr2ex")]
position = Vector2(215, 3)

[node name="Poisons" type="Node" parent="."]

[node name="Poison1" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(-254, -70)

[node name="Poison2" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(82, -70)

[node name="Poison3" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(26, 27)

[node name="Poison4" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(-230, 27)

[node name="Poison5" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(-248, 139)
scale = Vector2(0.768149, 0.927771)

[node name="Poison6" parent="Poisons" instance=ExtResource("3_co6y8")]
position = Vector2(68, 139)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(19.8728, -4.63187)
tile_set = SubResource("TileSet_emuvx")
collision_animatable = true
format = 2
layer_0/tile_data = PackedInt32Array(655340, 5, 0, 589804, 8, 0, 524268, 8, 0, 458732, 8, 0, 393196, 8, 0, 262124, 8, 0, 196588, 8, 0, 131052, 8, 0, 65516, 8, 0, -20, 8, 0, -65556, 8, 0, 655341, 5, 0, 655342, 5, 0, 655343, 5, 0, 655344, 5, 0, 655345, 5, 0, 655346, 5, 0, 655347, 5, 0, 655348, 5, 0, 655349, 5, 0, 655350, 5, 0, 655351, 5, 0, 655352, 5, 0, 655353, 5, 0, 655357, 5, 0, 655356, 5, 0, 655355, 5, 0, 655354, 5, 0, 655358, 5, 0, 655359, 5, 0, 589824, 5, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 5, 0, 589831, 5, 0, 589832, 5, 0, 589833, 5, 0, 589834, 5, 0, 589835, 5, 0, 589836, 5, 0, 589843, 8, 0, 524307, 8, 0, 458771, 8, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 393235, 8, 0, 327699, 8, 0, 262163, 8, 0, 196627, 8, 0, 131091, 8, 0, 65555, 8, 0, 19, 8, 0, -65517, 8, 0, -131053, 8, 0, -196589, 8, 0, -262125, 8, 0, -327661, 8, 0, -262164, 0, 0, -196628, 8, 0, -131092, 8, 0, 327660, 8, 0, 589823, 2, 0, 524288, 0, 0, 589805, 0, 0, 589806, 0, 0, 589807, 2, 0, 589808, 2, 0, 589817, 2, 0, 589818, 0, 0, 589819, 2, 0, 589820, 0, 0, 589821, 0, 0, 589822, 2, 0, 524289, 0, 0, 524290, 0, 0, 524291, 2, 0, 524292, 2, 0, 524293, 0, 0, 524294, 0, 0, 524299, 0, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, -196627, 5, 0, -196626, 5, 0, -196625, 5, 0, -196624, 5, 0, -196623, 5, 0, -196616, 5, 0, -262137, 5, 0, -262136, 5, 0, -262135, 5, 0, -262131, 5, 0, -262130, 5, 0, -262129, 5, 0, -262128, 5, 0, -262127, 5, 0, -262126, 5, 0, 131071, 6, 0, 131073, 7, 0, 131072, 7, 0, 196607, 7, 0, 131074, 7, 0, 131075, 6, 0, 131076, 6, 0, 131077, 6, 0, 131078, 6, 0, 131079, 6, 0, 131080, 6, 0, 131081, 6, 0, 131082, 6, 0, 131083, 6, 0, 131084, 6, 0, 131085, 6, 0, 196606, 7, 0, 196605, 7, 0, 196604, 6, 0, 196603, 6, 0, 196602, 6, 0, 196601, 6, 0, 196600, 6, 0, 196594, 6, 0, 196593, 6, 0, 131070, 2, 0, 589814, 2, 0, 589815, 2, 0, 589816, 2, 0, -196615, 5, 0, -196614, 5, 0, -262138, 5, 0, -327666, 2, 0, -327665, 2, 0, -327664, 2, 0, -327663, 2, 0, -327662, 2, 0, -327672, 2, 0, -327671, 2, 0, -327670, 2, 0, -262134, 5, 0, -262133, 5, 0, -262132, 5, 0, -327677, 2, 0, -262141, 5, 0, -262140, 5, 0, -327676, 2, 0, -262139, 5, 0, 524295, 0, 0, 524296, 2, 0, 524297, 0, 0, 524298, 0, 0, 589812, 2, 0, 589813, 0, 0, 65547, 2, 0, 65548, 2, 0, 65549, 2, 0, 131086, 6, 0, 65550, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 131064, 2, 0, 131065, 2, 0, 131066, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 2, 0, 65535, 2, 0, 0, 2, 0, 65536, 6, 0, 196595, 6, 0, 196596, 6, 0, 196597, 6, 0, 196598, 6, 0, 196599, 6, 0, 131060, 2, 0, 131059, 2, 0, 131058, 2, 0, 131057, 2, 0, -196613, 5, 0, -262149, 2, 0, -262148, 2, 0, -196612, 5, 0, -196622, 5, 0, -196621, 5, 0, -196620, 5, 0, -196619, 5, 0, -196618, 5, 0, -262154, 2, 0, -262155, 2, 0, -262153, 2, 0, -196617, 5, 0, -262160, 2, 0, -262161, 2, 0, -262159, 2, 0, -262162, 2, 0, -262163, 2, 0, 720876, 7, 0, 720877, 7, 0, 720878, 7, 0, 720879, 7, 0, 720880, 7, 0, 720881, 7, 0, 720882, 7, 0, 720883, 7, 0, 720884, 7, 0, 720885, 7, 0, 720886, 7, 0, 720887, 7, 0, 720888, 7, 0, 720889, 7, 0, 720890, 7, 0, 720891, 7, 0, 720892, 7, 0, 720893, 7, 0, 720894, 7, 0, 720895, 7, 0, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655363, 7, 0, 655364, 7, 0, 655365, 7, 0, 655366, 7, 0, 655367, 7, 0, 655368, 7, 0, 655369, 7, 0, 655370, 7, 0, 655371, 7, 0, 655372, 7, 0, 655373, 7, 0, 655374, 7, 0, 655375, 7, 0, 655376, 7, 0, 655377, 7, 0, 655378, 7, 0, 655379, 7, 0, -262165, 0, 0, -262166, 0, 0, -327702, 0, 0, -393238, 0, 0, -458774, 0, 0, -524310, 0, 0, -589846, 0, 0, -327660, 0, 0, -327659, 0, 0, -393195, 0, 0, -458731, 0, 0, -524267, 0, 0, -589803, 0, 0, -655339, 4, 0, -720875, 0, 0, -655382, 0, 0, -524303, 4, 0, -524302, 4, 0, -524301, 4, 0, -589813, 4, 0, -589812, 4, 0, -655340, 4, 0, -524291, 4, 0, -524290, 4, 0, -524289, 4, 0, -589814, 4, 0, -524300, 4, 0, -589805, 4, 0, -589804, 4, 0, -524309, 4, 0)

[node name="Door" parent="." instance=ExtResource("8_o7xg6")]
position = Vector2(-1, 112)

[node name="Button1" parent="." instance=ExtResource("7_qpitk")]
position = Vector2(-107, 16)

[node name="Button2" parent="." instance=ExtResource("7_qpitk")]
position = Vector2(63, 16)

[node name="Players" type="Node" parent="."]

[node name="Player 1 - Level" parent="Players" instance=ExtResource("1_rcf75")]
position = Vector2(-281, -91)
collision_mask = 6

[node name="Player 2 - Level" parent="Players" instance=ExtResource("2_ew0c6")]
position = Vector2(272, -100)

[node name="Level__manager" type="Node" parent="." groups=["Level_manager"]]
script = SubResource("GDScript_cdsgp")

[node name="UI" parent="." instance=ExtResource("17_hhid0")]

[connection signal="body_entered" from="Coins/Coin" to="." method="_on_coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin2" to="." method="_on_coin_2_body_entered"]
[connection signal="body_entered" from="Door" to="." method="_on_door_body_entered"]
[connection signal="body_exited" from="Door" to="." method="_on_door_body_exited"]
[connection signal="body_entered" from="Button1" to="." method="_on_button_1_body_entered"]
[connection signal="body_exited" from="Button1" to="." method="_on_button_1_body_exited"]
[connection signal="body_entered" from="Button2" to="." method="_on_button_2_body_entered"]
[connection signal="body_exited" from="Button2" to="." method="_on_button_2_body_exited"]
